--- a/C++Basics/Preparing_C++/2 part/6/6.md
+++ b/C++Basics/Preparing_C++/2 part/6/6.md
@@ -1,1 +1,1 @@
-
+### Разработайте систему управления запасами на складе, где каждый товар имеет уникальный ID, название и количество. Какие контейнеры STL вы бы использовали для этой задачи и почему? Напишите пример кода для добавления и удаления товаров.
