--- a/C++Basics/Preparing_C++/2 part/6/6.md
+++ b/C++Basics/Preparing_C++/2 part/6/6.md
@@ -1,1 +1,4 @@
 ### Разработайте систему управления запасами на складе, где каждый товар имеет уникальный ID, название и количество. Какие контейнеры STL вы бы использовали для этой задачи и почему? Напишите пример кода для добавления и удаления товаров.
+
+- Для реализации системы управления запасами на складе, где каждый товар имеет уникальный ID, название и количество, был использован контейнер std::unordered_map для хранения товаров, где ключом будет являться уникальный ID товара, а значение - структура или класс, содержащий название и количество товара
+
