--- a/C++Basics/Preparing_C++/2 part/15/15.md
+++ b/C++Basics/Preparing_C++/2 part/15/15.md
@@ -1,1 +1,3 @@
+### Представьте, что вы создаёте систему для управления расписанием транспорта, где каждый рейс имеет уникальный ID, маршрут и время отправления. Какие контейнеры STL вы бы использовали и почему? Напишите пример кода для добавления нового рейса и удаления существующего
 
+ -
