--- a/C++Basics/Preparing_C++/2 part/15/15.md
+++ b/C++Basics/Preparing_C++/2 part/15/15.md
@@ -1,3 +1,5 @@
 ### Представьте, что вы создаёте систему для управления расписанием транспорта, где каждый рейс имеет уникальный ID, маршрут и время отправления. Какие контейнеры STL вы бы использовали и почему? Напишите пример кода для добавления нового рейса и удаления существующего
 
- -
+ - Для управления расписанием транспорта, где каждый рейс имеет уникальный ID, маршрут и время отправления, были использованы контейнеры std::map и std::set.
+   - std::map для хранения информации о рейсах, где ключом будет уникальный ID рейса, а значением будет структура с информацией о маршруте и времени отправления.
+   - std::set для быстрого доступа к уникальным ID рейсов и удобного удаления рейсов.
